...
      { name: 'Standard with Ads', amount: 6.99, currency: 'USD', billingPeriod: 'MONTHLY' },
      { name: 'Standard', amount: 15.49, currency: 'USD', billingPeriod: 'MONTHLY' },
      { name: 'Premium', amount: 22.99, currency: 'USD', billingPeriod: 'MONTHLY' },
    ],
  },
  spotify: {
    name: 'Spotify', category: 'MUSIC', amount: 9.99, currency: 'USD', billingPeriod: 'MONTHLY',
    iconUrl: 'https://icon.horse/icon/spotify.com', serviceUrl: 'https://spotify.com',
    cancelUrl: 'https://www.spotify.com/account/subscription/cancel',
    plans: [
      { name: 'Individual', amount: 9.99, currency: 'USD', billingPeriod: 'MONTHLY' },
      { name: 'Duo', amount: 14.99, currency: 'USD', billingPeriod: 'MONTHLY' },
      { name: 'Family', amount: 16.99, currency: 'USD', billingPeriod: 'MONTHLY' },
...
